--- a/assets/lang/fi_FI.json
+++ b/assets/lang/fi_FI.json
@@ -58,6 +58,7 @@
 		"Update_Error": "Jotain meni päivityksessä pieleen",
 		"Go_Back": "Palaa takaisin",
 		"Tag": "Tagi",
+		"Do_You_Want_Delete_Thread_Confirm": "Haluatko oikeasti poistaa tämän langan?",
 
 		"Manage_Boards": "Hallinnoi lautoja",
 		"Create_Boards": "Luo lautoja",
