--- a/assets/lang/template.json
+++ b/assets/lang/template.json
@@ -58,6 +58,7 @@
 		"Update_Error": "",
 		"Go_Back": "",
 		"Tag": "",
+		"Do_You_Want_Delete_Thread_Confirm": "",
 
 		"Manage_Boards": "",
 		"Create_Boards": "",
