--- a/assets/lang/en_US.json
+++ b/assets/lang/en_US.json
@@ -70,6 +70,9 @@
 		"Delete_thread": "Delete thread",
 		"IP": "IP-Address",
 
-		"View": "View"
+		"View": "View",
+		"Locked": "LOCKED",
+		"Lock_Thread": "Lock thread",
+		"Unlock_Thread": "Unlock thread"
 	}
 }
