Upgraded to bootstrap 4

--- a/assets/lang/en_US.json
+++ b/assets/lang/en_US.json
@@ -25,11 +25,10 @@
 		"Id": "Id",
 		"Posted": "Posted",
 		"Anonymous": "Anonymous",
-		"Add_reply": "Add new reply",
+		"Add_reply": "Reply to this thread",
 		"Message_for_reply": "Your reply message",
-		"Not_found_title": "Oh snap! 404 not found!",
-		"Not_found_desc": "Requested page not found!",
-		"Not_found_desc_small": "You can go back to index from navigationbar.",
+		"Not_found_title": "Oh snap 404! Requested page not found!",
+		"Not_found_desc": "You can go back to index from navigation bar.",
 		"No_threads_on_board": "This board doesn't have any threads yet.",
 		"No_threads_create_maybe": "Maybe you should create a new thread on this board?",
 		"SFW": "Safe For Work",
@@ -51,7 +50,7 @@
 		"Delete": "Delete",
 		"Edit": "Edit",
 		"Create": "Create",
-		"Delete_Or_Edit": "Delete / Edit",
+		"Delete_Edit_View": "Delete / Edit / View",
 		"Edit_Board": "Edit board",
 		"Update": "Update",
 		"Update_Success": "Successfully updated!",
