--- a/assets/lang/fi_FI.json
+++ b/assets/lang/fi_FI.json
@@ -28,8 +28,7 @@
 		"Add_reply": "Vastaa lankaan",
 		"Message_for_reply": "Viesti vastaukseen",
 		"Not_found_title": "Voi ei! 404, sivua ei löytynyt!",
-		"Not_found_desc": "Etsimääsi sivua ei löytynyt!",
-		"Not_found_desc_small": "Voit palata etusivulle navigointipalkista.",
+		"Not_found_desc": "Voit palata etusivulle navigointipalkista.",
 		"No_threads_on_board": "Tässä laudassa ei ole vielä yhtään lankaa.",
 		"No_threads_create_maybe": "Ehkä sinun tulisi luoda uusi lanka tälle laudalle?",
 		"SFW": "Turvallinen työajalla",
@@ -51,7 +50,7 @@
 		"Delete": "Poista",
 		"Edit": "Muokkaa",
 		"Create": "Luo",
-		"Delete_Or_Edit": "Poista / Muokkaa",
+		"Delete_Edit_View": "Poista / Muokkaa / Katso",
 		"Edit_Board": "Muokkaa lautaa",
 		"Update": "Päivitä",
 		"Update_Success": "Päivitetty onnistuneesti!",
