--- a/assets/lang/template.json
+++ b/assets/lang/template.json
@@ -29,7 +29,6 @@
 		"Message_for_reply": "",
 		"Not_found_title": "",
 		"Not_found_desc": "",
-		"Not_found_desc_small": "",
 		"No_threads_on_board": "",
 		"No_threads_create_maybe": "",
 		"SFW": "",
@@ -51,7 +50,7 @@
 		"Delete": "",
 		"Edit": "",
 		"Create": "",
-		"Delete_Or_Edit": "",
+		"Delete_Edit_View": "",
 		"Edit_Board": "",
 		"Update": "",
 		"Update_Success": "",
